--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             <h2 style="margin: 0; font-size: 2rem; color: #2d3436;">Tổng quan Lớp 12A1</h2>
             <p style="color:#636e72;">Chào mừng bạn đến với hệ thống quản lý lớp học rực rỡ!</p>
         </div>
-        <span class="badge" style="background: var(--grad-danger); color: white; padding: 10px 20px;">Trạng thái: Active</span>
+        <span class="badge" style="background: var(--grad-danger); color: white; padding: 10px 20px;">Trạng thái: Học sinh</span>
     </div>
 
     <div class="cards" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px; margin-bottom: 20px;">
@@ -1275,3 +1275,4 @@ function showPage(id, el){
 
 </body>
 </html>
+
