--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                 <tr><td><span class="stt-circle">21</span></td><td><strong>Lê Ngọc Bảo Nhi</strong></td><td>31/01/2008</td><td><span class="gender-nu">Nữ</span></td><td>Học sinh</td><td><span class="badge">Đang học</span></td><td style="text-align:right">✏️</td></tr>
                 <tr><td><span class="stt-circle">22</span></td><td><strong>Nguyễn Thị Kiều Oanh</strong></td><td>26/10/2008</td><td><span class="gender-nu">Nữ</span></td><td>Học sinh</td><td><span class="badge">Đang học</span></td><td style="text-align:right">✏️</td></tr>
                 <tr><td><span class="stt-circle">23</span></td><td><strong>Phan Lê Hồng Oanh</strong></td><td>13/07/2008</td><td><span class="gender-nu">Nữ</span></td><td>Bí Thư</td><td><span class="badge">Đang học</span></td><td style="text-align:right">✏️</td></tr>
-                <tr><td><span class="stt-circle">24</span></td><td><strong>Nguyễn Thế Phát</strong></td><td>26/02/2008</td><td><span class="gender-nam">Nam</span></td><td><span class="role-monitor">Tổ Trưởng Tổ 1</span></td><td><span class="badge">Đang học</span></td><td style="text-align:right">✏️</td></tr>
+                <tr><td><span class="stt-circle">24</span></td><td><strong>Nguyễn Thế Phát</strong></td><td>26/02/2008</td><td><span class="gender-nu">Nam</span></td><td>Tổ Trưởng Tổ 1</td><td><span class="badge">Đang học</span></td><td style="text-align:right">✏️</td></tr>
                 <tr><td><span class="stt-circle">25</span></td><td><strong>Nguyễn Cao Phong</strong></td><td>11/11/2008</td><td><span class="gender-nam">Nam</span></td><td>Học sinh</td><td><span class="badge">Đang học</span></td><td style="text-align:right">✏️</td></tr>
                 <tr><td><span class="stt-circle">26</span></td><td><strong>Huỳnh Ngọc Phúc</strong></td><td>20/06/2008</td><td><span class="gender-nam">Nam</span></td><td>Học sinh</td><td><span class="badge">Đang học</span></td><td style="text-align:right">✏️</td></tr>
                 <tr><td><span class="stt-circle">27</span></td><td><strong>Lê Thị Thảo Phương</strong></td><td>23/12/2008</td><td><span class="gender-nu">Nữ</span></td><td>Học sinh</td><td><span class="badge">Đang học</span></td><td style="text-align:right">✏️</td></tr>
@@ -1275,5 +1275,4 @@ function showPage(id, el){
 
 </body>
 </html>
-
 
