--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
             <div style="margin-top: 15px;">
                 <p><strong>📌 Phan Bảo Lâm</strong></p>
                 <hr style="border: 0; border-top: 1px solid #eee;">
-                <p style="color: #ff7675;"><strong>⚠️ Nhắc nhở:</strong> Gặp cô Hạnh tại phòng văn thư vào thứ 6.</p>
+                <p style="color: #ff7675;"><strong>⚠️ Thông Báo</strong> Bảo Lâm nhập viện vì thiếu nước.</p>
             </div>
         </div>
     </div>
@@ -412,7 +412,7 @@
     <div class="toolbar">
         <div>
             <h2 style="margin:0">👥 Danh sách Lớp 12A1</h2>
-            <small>Sĩ số: 43 học sinh | 100% hiện diện</small>
+            <small>Sĩ số: 43 học sinh | 42 hiện diện</small>
         </div>
         <input class="search" placeholder="🔍 Tìm tên học sinh..." onkeyup="filterStudents(this)" />
     </div>
@@ -445,7 +445,7 @@
                 <tr><td><span class="stt-circle">12</span></td><td><strong>Phạm Thị Vân Khánh</strong></td><td>26/01/2008</td><td><span class="gender-nu">Nữ</span></td><td>Học sinh</td><td><span class="badge">Đang học</span></td><td style="text-align:right">✏️</td></tr>
                 <tr><td><span class="stt-circle">13</span></td><td><strong>Nguyễn Đăng Khoa</strong></td><td>28/10/2008</td><td><span class="gender-nam">Nam</span></td><td>Lớp Phó Lao Động</td><td><span class="badge">Đang học</span></td><td style="text-align:right">✏️</td></tr>
                 <tr><td><span class="stt-circle">14</span></td><td><strong>Nguyễn Đình Khoa</strong></td><td>29/12/2008</td><td><span class="gender-nam">Nam</span></td><td>Học sinh</td><td><span class="badge">Đang học</span></td><td style="text-align:right">✏️</td></tr>
-                <tr><td><span class="stt-circle">15</span></td><td><strong>Phan Bảo Lâm</strong></td><td>26/11/2008</td><td><span class="gender-nam">Nam</span></td><td>Học sinh</td><td><span class="badge">Đ đang học</span></td><td style="text-align:right">✏️</td></tr>
+                <tr><td><span class="stt-circle">15</span></td><td><strong>Phan Bảo Lâm</strong></td><td>26/11/2008</td><td><span class="gender-nam">Nam</span></td><td>Học sinh</td><td><span class="badge">Vắng học</span></td><td style="text-align:right">✏️</td></tr>
                 <tr><td><span class="stt-circle">16</span></td><td><strong>Nguyễn Hoàng My</strong></td><td>18/09/2008</td><td><span class="gender-nu">Nữ</span></td><td>Lớp Phó Học Tập</td><td><span class="badge">Đang học</span></td><td style="text-align:right">✏️</td></tr>
                 <tr><td><span class="stt-circle">17</span></td><td><strong>Lê Nguyễn Hạo Nam</strong></td><td>04/04/2008</td><td><span class="gender-nam">Nam</span></td><td>Học sinh</td><td><span class="badge">Đang học</span></td><td style="text-align:right">✏️</td></tr>
                 <tr><td><span class="stt-circle">18</span></td><td><strong>Nguyễn Hoàng Kim Ngân</strong></td><td>25/04/2008</td><td><span class="gender-nu">Nữ</span></td><td>Học sinh</td><td><span class="badge">Đang học</span></td><td style="text-align:right">✏️</td></tr>
@@ -1275,4 +1275,5 @@ function showPage(id, el){
 
 </body>
 </html>
+
 
